--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,8 @@
   background-color:#F8FBF7;
   box-shadow: 3px 3px 3px #222;
   min-height: 250px;
+  margin-top: 10px;
+  margin-bottom: 10px; 
 }
 
 .navbar-default {
